he conectado la home a un servicio rest api de wordpress

--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -91,7 +91,7 @@
                 <a href="https://www.caib.es/govern/organigrama/area.do?coduo=5213900&lang=es"  target="_blank" class="text-reset">Servicio de emprendimiento, economía social y circular</a>
             </p>
             <p>
-                <a href="#!" class="text-reset">Help</a>
+                <a href="#!" class="icon-link icon-link-hover text-reset">Help</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -100,13 +100,10 @@
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-            <p><i class="fas fa-home me-3"></i> Plaça Son Castelló 1 (Polígon Son Castelló) - 07009 Palma</p>
-            <p>
-              <i class="fas fa-envelope me-3"></i>
-              info@example.com
-            </p>
-            <p><i class="fas fa-phone me-3"></i> + 971 178 900</p>
-            <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+            <p>Plaça Son Castelló 1 (Polígon Son Castelló) - 07009 Palma</p>
+            <p>info@example.com</p>
+            <p>+ 971 178 900</p>
+            <p>+ 01 234 567 89</p>
           </div>
           <!-- Grid column -->
         </div>
