--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,254 +1,24 @@
 <app-nav-bar></app-nav-bar>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12">
-            <div class="card-grid">
-                <div class="d-flex flex-wrap mt-4">
-
-                    <div class="card-wrapper px-2 pb-4">
-                        <a href="#">
-                            <div class="card">
-                                <img src="https://via.placeholder.com/350x212" class="card-img-top img-fluid">
-                                <div class="card-body">
-                                    <span *ngIf="isNew" class="new-badge">NEW</span>
-                                    <h4 class="card-title">Lorem ipsum dolor...</h4>
-                                    <p class="card-text">
-                                        Duis pharetra massa vitae felis tincidunt, 
-                                        ac gravida enim sollicitudin. Vestibulum 
-                                        ante ipsum primis in faucibus orci luctus 
-                                        et ultrices posuere cubilia Curae; Sed id 
-                                        leo venenatis, ornare nisi commodo, 
-                                        suscipit velit. Vivamus iaculis ornare 
-                                        libero, id lacinia quam iaculis vitae. 
-                                        Nunc quis magna vel ante ornare facilisis.
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="card-wrapper px-2 pb-4">
-                        <a href="#">
-                            <div class="card">
-                                <img src="https://via.placeholder.com/350x150" class="card-img-top img-fluid">
-                                <div class="card-body">
-                                    <span *ngIf="isNew" class="new-badge">NEW</span>
-                                    <h4 class="card-title">Lorem ipsum dolor...</h4>
-                                    <p class="card-text">
-                                        Duis pharetra massa vitae felis tincidunt, 
-                                        ac gravida enim sollicitudin. Vestibulum 
-                                        ante ipsum primis in faucibus orci luctus 
-                                        et ultrices posuere cubilia Curae; Sed id 
-                                        leo venenatis, ornare nisi commodo, 
-                                        suscipit velit. Vivamus iaculis ornare 
-                                        libero, id lacinia quam iaculis vitae. 
-                                        Nunc quis magna vel ante ornare facilisis.
-                                    </p>
-
-                                    <p class="card-text">
-                                        Quisque sit amet pellentesque erat. Etiam 
-                                        vel tellus bibendum risus lobortis 
-                                        molestie. Nam hendrerit bibendum sapien, 
-                                        non dictum lectus hendrerit et.
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="card-wrapper px-2 pb-4">
-                        <a href="#">
-                            <div class="card">
-                                <div class="card-body">
-                                    <span *ngIf="!isNew" class="new-badge">NEW</span>
-                                    <h4 class="card-title">Lorem ipsum dolor...</h4>
-                                    <p class="card-text">
-                                        Duis pharetra massa vitae felis tincidunt, 
-                                        ac gravida enim sollicitudin. Vestibulum 
-                                        ante ipsum primis in faucibus orci luctus 
-                                        et ultrices posuere cubilia Curae; Sed id 
-                                        leo venenatis, ornare nisi commodo, 
-                                        suscipit velit. Vivamus iaculis ornare 
-                                        libero, id lacinia quam iaculis vitae. 
-                                        Nunc quis magna vel ante ornare facilisis.
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="card-wrapper px-2 pb-4">
-                        <a href="#">
-                            <div class="card">
-                                <img src="https://via.placeholder.com/350x150" class="card-img-top img-fluid">
-                                <div class="card-body">
-                                    <span class="new-badge">NEW</span>
-                                    <h4 class="card-title">Lorem ipsum dolor...</h4>
-                                    <p class="card-text">
-                                        Duis pharetra massa vitae felis tincidunt, 
-                                        ac gravida enim sollicitudin. Vestibulum 
-                                        ante ipsum primis in faucibus orci luctus 
-                                        et ultrices posuere cubilia Curae; Sed id 
-                                        leo venenatis, ornare nisi commodo, 
-                                        suscipit velit. Vivamus iaculis ornare 
-                                        libero, id lacinia quam iaculis vitae. 
-                                        Nunc quis magna vel ante ornare facilisis.
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="card-wrapper px-2 pb-4">
-                        <a href="#">
-                            <div class="card">
-                                <img src="https://via.placeholder.com/350x150" class="card-img-top img-fluid">
-                                <div class="card-body">
-                                    <span class="new-badge">NEW</span>
-                                    <h4 class="card-title">Lorem ipsum dolor...</h4>
-                                    <p class="card-text">
-                                        Duis pharetra massa vitae felis tincidunt, 
-                                        ac gravida enim sollicitudin. Vestibulum 
-                                        ante ipsum primis in faucibus orci luctus 
-                                        et ultrices posuere cubilia Curae; Sed id 
-                                        leo venenatis, ornare nisi commodo, 
-                                        suscipit velit. Vivamus iaculis ornare 
-                                        libero, id lacinia quam iaculis vitae. 
-                                        Nunc quis magna vel ante ornare facilisis.
-                                    </p>
-
-                                    <p class="card-text">
-                                        Quisque sit amet pellentesque erat. Etiam 
-                                        vel tellus bibendum risus lobortis 
-                                        molestie. Nam hendrerit bibendum sapien, 
-                                        non dictum lectus hendrerit et.
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="card-wrapper px-2 pb-4">
-                        <a href="#">
-                            <div class="card">
-                                <img src="https://via.placeholder.com/350x212" class="card-img-top img-fluid">
-                                <div class="card-body">
-                                    <span class="new-badge">NEW</span>
-                                    <h4 class="card-title">Lorem ipsum dolor...</h4>
-                                    <p class="card-text">
-                                        Duis pharetra massa vitae felis tincidunt, 
-                                        ac gravida enim sollicitudin. Vestibulum 
-                                        ante ipsum primis in faucibus orci luctus 
-                                        et ultrices posuere cubilia Curae; Sed id 
-                                        leo venenatis, ornare nisi commodo, 
-                                        suscipit velit. Vivamus iaculis ornare 
-                                        libero, id lacinia quam iaculis vitae. 
-                                        Nunc quis magna vel ante ornare facilisis.
-                                    </p>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
+<div *ngIf="!homeContentItems" class="name">Un momento ...</div>
 
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
-    <div class="col mb-4">
-      <div class="card">
-        <img src="https://dummyimage.com/600x400/000/fff.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+
+    <div *ngFor="let homeContentItem of homeContentItems; let i=index; let odd=odd;">
+      <a href="#">
+        <div class="col mb-4">
+          <div class="card">
+            <img src="https://dummyimage.com/600x400/faf7fa/000.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <span *ngIf="!isNew" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning">NEW</span>
+              <h5 class="card-title">{{ homeContentItem.title.rendered }}</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img src="https://dummyimage.com/600x400/000/fff.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img src="https://dummyimage.com/600x400/000/fff.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img src="https://dummyimage.com/600x400/000/fff.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img src="https://dummyimage.com/600x400/000/fff.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img src="https://dummyimage.com/600x400/000/fff.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img src="https://dummyimage.com/600x400/000/fff.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img src="https://dummyimage.com/600x400/000/fff.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img src="https://dummyimage.com/600x400/000/fff.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col mb-4">
-      <div class="card">
-        <img src="https://dummyimage.com/600x400/000/fff.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-  </div>
+
+</div>
 
 <app-footer></app-footer>
