--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -13,6 +13,8 @@
               <span *ngIf="!isNew" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning">NEW</span>
               <h5 class="card-title">{{ homeContentItem.title.rendered }}</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <a href="#" class="btn mr-2"><i class="fas fa-link"></i> Visit Site</a>
+              <a href="#" class="btn "><i class="fab fa-github"></i> More info</a>
             </div>
           </div>
         </div>
