--- a/src/app/Components/home/home.component.scss
+++ b/src/app/Components/home/home.component.scss
@@ -69,18 +69,19 @@ a {
   }
   
   .btn {
-    border: 5px solid;
+    border: 5px solid #fff !important; 
     border-image-slice: 1;
+
     background: var(--gradient) !important;
     -webkit-background-clip: text !important;
-    -webkit-text-fill-color: transparent !important;
+    -webkit-text-fill-color: #fff !important;
     border-image-source:  var(--gradient) !important; 
     text-decoration: none;
     transition: all .4s ease;
   }
   
   .btn:hover, .btn:focus {
-        background: var(--gradient) !important;
+    background: var(--gradient) !important;
     -webkit-background-clip: none !important;
     -webkit-text-fill-color: #fff !important;
     border: 5px solid #fff !important; 
