--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,11 @@ a {
 a:hover {
     color:#cc073c!important;
 }
+
+.translate-middle {
+  transform: translate(-110%, -50%) !important;
+}
+
+.rounded-pill {
+  border-radius: 3px !important;
+}
