--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -42,11 +42,23 @@
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
             <h6 class="text-uppercase fw-bold mb-4">
-              <i class="fas fa-gem me-3"></i>Company name
+              WHAT WE DO
             </h6>
             <p>
-              Here you can use rows and columns to organize your footer content. Lorem ipsum
-              dolor sit amet, consectetur adipisicing elit.
+              empresa<br> 
+              políticas de creación y crecimiento empresarial<br> 
+              promoción, desarrollo y dinamización económica<br> 
+              modernización de las empresas<br> 
+              coordinación de la especialización inteligente<br> 
+              internacionalización, atracción de inversión extranjera y proyectos estratégicos<br> 
+              financiación y apoyo empresarial<br> 
+              promoción del autoempleo y la cultura emprendedora<br> 
+              gestión, fomento y difusión de los modelos de economía social y autoempleo, entre los que destacan las sociedades cooperativas, las sociedades laborales y los autónomos<br> 
+              registros públicos de empresas y asociaciones empresariales de la economía social y del trabajo autónomo<br> 
+              coordinación y gestión de la implantación de un sistema de gestión ética y socialmente responsable con la asunción del Sistema Balear de Responsabilidad Social Corporativa de Empresas<br> 
+              comercio interior<br> 
+              equipamientos comerciales<br> ferias<br> artesanía<br> cámaras de comercio<br> política de precios comerciales<br> 
+              fomento en materia de comercio<br> casinos, juegos y apuestas.
             </p>
           </div>
           <!-- Grid column -->
@@ -55,19 +67,19 @@
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Products
+              SERVICES
             </h6>
             <p>
-              <a href="#!" class="text-reset">Angular</a>
+              <a href="https://www.caib.es/govern/sac/fitxa.do?codi=5542954&coduo=57&lang=ca" class="text-reset">AUTÓNOMOS INICIO 2023 </a>
             </p>
             <p>
-              <a href="#!" class="text-reset">React</a>
+              <a href="https://www.caib.es/govern/sac/fitxa.do?codi=5628827&coduo=57&lang=es" class="text-reset">Ayudas para fomentar la cooperación empresarial </a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Vue</a>
+              <a href="https://www.caib.es/govern/sac/fitxa.do?codi=5702737&coduo=57&lang=es" class="text-reset">Convocatoria de ayudas para dar fomento a la economía social</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Laravel</a>
+              <a href="https://www.caib.es/govern/sac/fitxa.do?codi=5509323&coduo=57&lang=es" class="text-reset">Calendari de Fires i Mercats 2023 </a>
             </p>
           </div>
           <!-- Grid column -->
@@ -101,9 +113,8 @@
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
             <p>Plaça Son Castelló 1 (Polígon Son Castelló) - 07009 Palma</p>
-            <p>info@example.com</p>
+            <p>info@pieib.com</p>
             <p>+ 971 178 900</p>
-            <p>+ 01 234 567 89</p>
           </div>
           <!-- Grid column -->
         </div>
