estoy modificando la cabecera para añadir la fila de logos y language

--- a/src/app/Components/nav-bar/nav-bar.component.html
+++ b/src/app/Components/nav-bar/nav-bar.component.html
@@ -1,30 +1,47 @@
+<div class="pieib-header">
+  <div id="pieib-header-logo"><a class="navbar-brand" href="#">pieib.com</a></div>
+  <div id="pieib-header-lang">cat | cas | eng</div>
+  <div id="pieib-header-logo-goib"><a href="https://caib.es"><img src="../../../assets/logos/goib.svg" alt="logos GOIB" title="Govern de les Illes Balears" target="_blank"></a></div>
+</div>
+
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">pieib.com</a>
+   
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Option 1</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Option 2
-          </a>
+        <li class="nav-item  dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Empresas-Econ. Social</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Empresas</a></li>
+            <li><a class="dropdown-item" href="#">Economía social</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-disabled="true">Option 3</a>
+          <a class="nav-link" href="#">Autónomo</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Emprendedor
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Ibstartup</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" aria-disabled="false">Comercio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" aria-disabled="false">Internacionalización</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" aria-disabled="false">Proyectos estratégicos</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
