--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -113,8 +113,8 @@
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
             <p>Plaça Son Castelló 1 (Polígon Son Castelló) - 07009 Palma</p>
-            <p>info@pieib.com</p>
-            <p>+ 971 178 900</p>
+            <p><a href="mailto:info@pieib.com">info@pieib.com</a></p>
+            <p><a href="tel:+971178900">+ 971 178 900</a></p>
           </div>
           <!-- Grid column -->
         </div>
