--- a/src/app/Components/nav-bar/nav-bar.component.scss
+++ b/src/app/Components/nav-bar/nav-bar.component.scss
@@ -1,3 +1,29 @@
+.pieib-header {
+    display: grid;
+ /*    border: 1px red solid; */
+    grid-template-columns: 33% 33% 34%;
+    margin-top: 1rem;
+}
+#pieib-header-logo {
+    background-color: lime;
+    grid-area: 1 / 1 / span 1 / span 1;
+}
+
+/* grid-area: grid-row-start / grid-column-start / grid-row-end / grid-column-end; */
+
+#pieib-header-lang{
+    background-color: yellow;
+    grid-area: 1 / 2 / span 1 / span 1;
+    text-align: center;
+}
+#pieib-header-logo-goib{
+/*     background-color: blue; */
+    grid-area: 1 / 3 / span 1 / span 1;
+    text-align: right;
+}
+#pieib-header-logo-goib img {
+    max-width: 20%;
+}
 nav {
     margin-top: 1rem;
     margin-bottom: 2rem;
