estoy con translate eng, cas y cat

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -14,8 +14,8 @@
               <h5 class="card-title">{{ homeContentItem.title.rendered }}</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <div class="input-group mb-3">
-                <a href="#" class="btn mr-2"><i class="fas fa-link"></i> Visit Site</a>
-                <a href="#" class="btn "><i class="fab fa-github"></i> More info</a>
+                <a href="#" class="btn mr-2">{{'visitSite' | translate}}</a>
+                <a href="#" class="btn ">{{'moreInfo' | translate}}</a>
               </div>
             </div>
           </div>
