he cambiado el título del sitio

--- a/src/app/Components/nav-bar/nav-bar.component.html
+++ b/src/app/Components/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <div class="pieib-header">
-  <div id="pieib-header-logo"><a class="navbar-brand" href="#">pieib.com</a></div>
+  <div id="pieib-header-logo"><a class="navbar-brand" href="#">pieib.com</a><br>Portal Impulso Empresarial de las Illes Balears</div>
   <div id="pieib-header-lang"> <app-select-language></app-select-language></div>
   <div id="pieib-header-logo-goib"><a href="https://caib.es"><img src="../../../assets/logos/goib.svg" alt="logos GOIB" title="Govern de les Illes Balears" target="_blank"></a></div>
 </div>
