--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,28 +1,3 @@
 <app-nav-bar></app-nav-bar>
-
-<div *ngIf="!homeContentItems" class="name">Un momento ...</div>
-
-<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xl-5">
-
-    <div *ngFor="let homeContentItem of homeContentItems; let i=index; let odd=odd;">
-      <a href="#">
-        <div class="col mb-4">
-          <div class="card">
-            <img src="https://dummyimage.com/600x400/faf7fa/000.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <span *ngIf="!isNew" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning">NEW</span>
-              <h5 class="card-title">{{ homeContentItem.title.rendered }}</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <div class="input-group mb-3">
-                <a href="#" class="btn mr-2">{{'visitSite' | translate}}</a>
-                <a href="#" class="btn ">{{'moreInfo' | translate}}</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </a>
-    </div>
-
-</div>
-
+<app-slider-home></app-slider-home>
 <app-footer></app-footer>
