he traducido el footer

--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -42,7 +42,7 @@
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
             <h6 class="text-uppercase fw-bold mb-4">
-              WHAT WE DO
+              {{'whatWeDo' | translate}}
             </h6>
             <p>
               empresa<br> 
@@ -67,7 +67,7 @@
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              SERVICES
+              {{'services' | translate}}
             </h6>
             <p>
               <a href="https://www.caib.es/govern/sac/fitxa.do?codi=5542954&coduo=57&lang=ca" class="text-reset">AUTÓNOMOS INICIO 2023 </a>
@@ -88,7 +88,7 @@
           <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">
-              Useful links
+              {{'usefulLinks' | translate}}
             </h6>
             <p>
                 <a href="https://www.caib.es/govern/organigrama/area.do?coduo=3026&lang=es" target="_blank" class="text-reset">Servicio de comercio</a>
@@ -111,7 +111,7 @@
           <!-- Grid column -->
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+            <h6 class="text-uppercase fw-bold mb-4">{{'contact' | translate}}</h6>
             <p>Plaça Son Castelló 1 (Polígon Son Castelló) - 07009 Palma</p>
             <p><a href="mailto:info@pieib.com">info@pieib.com</a></p>
             <p><a href="tel:+971178900">+ 971 178 900</a></p>
