--- a/src/app/Components/slider-home/slider-home.component.html
+++ b/src/app/Components/slider-home/slider-home.component.html
@@ -1,30 +1,17 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="https://dummyimage.com/16:9x1080/000000/ffffff" alt="First slide">
-        <div class="carousel-caption d-none d-md-block">
-            <h5>Slide header Description</h5>
-            <p>Slide paragraph text</p>
-          </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://dummyimage.com/16:9x1080/ffffff/000000" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://dummyimage.com/16:9x1080/ff0000/000000" alt="Third slide">
-      </div>
+<div class="container-fluid">
+   
+<h1>Angular 14 Bootstrap Carousel Example - Tutsmake.com</h1>
+   
+<ngb-carousel>
+  <ng-template ngbSlide *ngFor="let image of images">
+    <div class="wrapper">
+      <img [src]="image.src" alt="Random first slide">
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">{{'previous' | translate}}</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">{{'next' | translate}}</span>
-    </a>
-  </div>
+    <div class="carousel-caption">
+      <h3>{{ image.title }}</h3>
+      <p>{{ image.short }}</p>
+    </div>
+  </ng-template>
+</ngb-carousel>
+     
+</div>
