--- a/src/app/Components/slider-home/slider-home.component.html
+++ b/src/app/Components/slider-home/slider-home.component.html
@@ -1,17 +1,42 @@
 <div class="container-fluid">
    
-<h1>Angular 14 Bootstrap Carousel Example - Tutsmake.com</h1>
-   
-<ngb-carousel>
-  <ng-template ngbSlide *ngFor="let image of images">
-    <div class="wrapper">
-      <img [src]="image.src" alt="Random first slide">
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-caption">
-      <h3>{{ image.title }}</h3>
-      <p>{{ image.short }}</p>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://dummyimage.com/wxga" class="d-block w-100" alt="https://dummyimage.com/wxga">
+        <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://dummyimage.com/wxga" class="d-block w-100" alt="https://dummyimage.com/wxga">
+        <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://dummyimage.com/wxga" class="d-block w-100" alt="https://dummyimage.com/wxga">
+        <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
     </div>
-  </ng-template>
-</ngb-carousel>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
      
 </div>
