--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,3 +1,2 @@
-<app-nav-bar></app-nav-bar>
 <app-slider-home></app-slider-home>
-<app-footer></app-footer>
+<app-paragraph-home></app-paragraph-home>
