--- a/src/app/Components/nav-bar/nav-bar.component.html
+++ b/src/app/Components/nav-bar/nav-bar.component.html
@@ -22,7 +22,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">{{'autonomo' | translate}}</a>
+          <a class="nav-link" routerLink="/autonomos">{{'autonomo' | translate}}</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
