he creado componentes de home

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,2 +1,4 @@
 <app-slider-home></app-slider-home>
 <app-paragraph-home></app-paragraph-home>
+<app-texto-imagen-home></app-texto-imagen-home>
+<app-slider-red-servicios-home></app-slider-red-servicios-home>
