he creado componentes de home

--- a/src/app/Components/ayudas-subv-home/ayudas-subv-home.component.html
+++ b/src/app/Components/ayudas-subv-home/ayudas-subv-home.component.html
@@ -1,1 +1,5 @@
-<p>ayudas-subv-home works!</p>
+<div>
+<a href="https://iempren.es/es/ayudas-y-subvenciones/" target="_blank">
+<img src="../../../assets/images/ayudas-subvenciones-pieib.jpg">
+</a>
+</div>
