--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,4 +1,5 @@
 <app-slider-home></app-slider-home>
 <app-paragraph-home></app-paragraph-home>
+<app-ayudas-subv-home></app-ayudas-subv-home>
 <app-texto-imagen-home></app-texto-imagen-home>
-<app-slider-red-servicios-home></app-slider-red-servicios-home>
+<!--<app-slider-red-servicios-home></app-slider-red-servicios-home> -->
