estoy con la home

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -2,4 +2,4 @@
 <app-paragraph-home></app-paragraph-home>
 <app-ayudas-subv-home></app-ayudas-subv-home>
 <app-texto-imagen-home></app-texto-imagen-home>
-<!--<app-slider-red-servicios-home></app-slider-red-servicios-home> -->
+<app-slider-red-servicios-home></app-slider-red-servicios-home>
