--- a/src/app/Components/texto-imagen-home/texto-imagen-home.component.scss
+++ b/src/app/Components/texto-imagen-home/texto-imagen-home.component.scss
@@ -1,3 +1,11 @@
-.row{
+.container-text-image{
+    display: grid!important;
+    grid-template-columns: 40% 60%!important;
+    gap: 1rem;
     border: 1px solid red;
+    margin-top: 1rem;
+}
+
+div > img {
+    width: 98%!important;
 }
