--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+  margin: auto; 
+  font-family: Roboto, "Helvetica Neue", sans-serif; 
+  max-width: 1100px;
+  padding: 0!important;
+}
 
 a {
     text-decoration: none;
@@ -17,4 +22,14 @@ a:hover {
 
 .rounded-pill {
   border-radius: 3px !important;
+}
+
+.row {
+  --bs-gutter-x: 0;
+  margin-top: 1rem;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
