he acabado el componente slider-serv-emp-home

--- a/src/app/Components/ayudas-subv-home/ayudas-subv-home.component.html
+++ b/src/app/Components/ayudas-subv-home/ayudas-subv-home.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col">
         <a href="https://iempren.es/es/ayudas-y-subvenciones/" target="_blank">
-            <img src="../../../assets/images/ayudas-subvenciones-pieib.jpg" title="ver ayudas y subvenciones" alt="ayudas y subvenciones">
+            <img src="../../../assets/images/ayudas-subvenciones-pieib.jpg" title="ver ayudas y subvenciones" alt="ayudas y subvenciones" class="img-fluid">
         </a>
     </div>
 </div>
