estoy con el componente slider-serv-emp-home

--- a/src/app/Components/slider-red-servicios-home/slider-red-servicios-home.component.html
+++ b/src/app/Components/slider-red-servicios-home/slider-red-servicios-home.component.html
@@ -6,7 +6,7 @@
   <div [innerHTML]="contentRedServiciosEmpresariales.content.rendered" class=""></div>
 
   <div class="container text-center my-3">
-    <h2 class="font-weight-light">Bootstrap Multi Slide Carousel</h2>
+    <h2 class="font-weight-light">Servicios públicos empresariales Baleares</h2>
     <div class="row mx-auto my-auto justify-content-center">
         <div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner" role="listbox">
